Rescue GrowAPet and implement controlled v2